project/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: project-pv
          persistentVolumeClaim:
            claimName: project-claim
      containers:
      - name: todo-app
        image: eerola/todo-app:4.5.1
        resources:
          requests:
            cpu: "10m"
            memory: "48Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
        - name: project-pv
          mountPath: /usr/src/app/project
        imagePullPolicy: Always
