project/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 1234

          - path: /break
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 1234

          - path: /livez
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 1234

          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app
                port:
                  number: 1234
