project/base/project-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: project-route
spec:
  parentRefs:
  - name: project-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-app
      port: 1234
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    - path:
        type: PathPrefix
        value: /break
    - path:
        type: PathPrefix
        value: /livez
    backendRefs:
    - name: todo-backend
      port: 1234
